--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
+    <!-- <header>
         <nav class="navbar">
             <a href="#" class="logo">MySite</a>
             <ul class="nav-links">
@@ -18,15 +18,25 @@
                 <li><a href="#blog">Blog</a></li>
             </ul>
         </nav>
-    </header>
+    </header> -->
 
     <!-- Content of the page -->
     <main>
-        <!-- Main content goes here -->
+       <div class="hero"><h1 class="heroone">site Wide Header</h1></div>
+
+<div class="flex-container">
+  <div>Home</div>
+  <div>About us</div>
+  <div>Contact</div>  
+  <div>Blog</div>
+  <div>Services</div>
+  <div>Portfolio</div>  
+  
+</div>
     </main>
 
-    <footer>
+    <!-- <footer>
         <p>&copy; 2024 MySite. All rights reserved.</p>
-    </footer>
+    </footer> -->
 </body>
 </html>
