--- a/index.html
+++ b/index.html
@@ -33,6 +33,31 @@
   <div>Portfolio</div>  
   
 </div>
+
+<div class="description">
+    <div>
+        <h1>This is the Heading OF the Artical</h1>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+         Illo ipsa iste vitae distinctio. Cumque sed hic modi sapiente ipsam reprehenderit incidunt nesciunt 
+         blanditiis commodi totam, nobis unde facilis quia aliquam. </br>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+         Illo ipsa iste vitae distinctio. Cumque sed hic modi sapiente ipsam reprehenderit incidunt nesciunt 
+         blanditiis commodi totam, nobis unde facilis quia aliquam.</br>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+         Illo ipsa iste vitae distinctio. Cumque sed hic modi sapiente ipsam reprehenderit incidunt nesciunt 
+         blanditiis commodi totam, nobis unde facilis quia aliquam.</p>
+    
+
+    </div>
+   
+   
+    
+
+
+</div>
+
+<div class="right">
+    <h1>copy right 2017 MY Site</h1>
+   
+</div>
     </main>
 
     <!-- <footer>
